list html made template for me/women products

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About us</title>
     <script src="js/burger.js" defer></script>
     <script type="module" src="js/cartIconDisplay.mjs"></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -33,10 +34,10 @@
                         <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="men.html">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="women.html">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
