--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raindays-shop for rainy comfort</title>
     <script type="module" src="js/index.js"></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/variables.css">
@@ -30,10 +31,10 @@
                         <a class="nav__link" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="men.html">Men</a>
+                        <a class="nav__link">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="women.html">Women</a>
+                        <a class="nav__link">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" href="list.html">Kids</a>
