--- a/jacket.html
+++ b/jacket.html
@@ -9,6 +9,7 @@
     <script type="module" src="js/jacket.js"></script>
     <script src="js/burger.js" defer></script>
     <script src="js/popup.js" defer></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/normalize.css">
@@ -233,8 +234,7 @@
                 <div class="item-3-color">
                     <p tabindex="0" class="color-name">Color: Red/Black</p>
                     <div class="color-group flex">
-                        <div class="color color-red"></div>
-                        <div class="color color-green"></div>
+                        <div class="color"></div>
                     </div>
                 </div>
                 <div class="item-3-quantity flex">
