--- a/payment.html
+++ b/payment.html
@@ -8,6 +8,7 @@
     <script type="module" src="js/payment.js" defer></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -32,10 +33,10 @@
                         <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="men.html">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="women.html">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
