--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <script type="module" src="js/shoppingCart.js" defer></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -30,10 +31,10 @@
                         <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="men.html">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="women.html">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
