--- a/list.html
+++ b/list.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of jackets</title>
     <script type="module" src="js/list.js"></script>
+    <script src="js/getPageName.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
@@ -32,10 +33,10 @@
                         <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="men.html">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="women.html">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
@@ -90,7 +91,7 @@
         <ul class="panel__list list-reset"></ul>
     </nav>
     <div class="container" id="lj">
-        <h1 class="page-title" tabindex="0">FOR WOMEN</h1>
+        <h1 class="page-title" tabindex="0"></h1>
         <div class="grid-container-ls">
             <aside class="sidebar flex">
                 <div class="top__item-1">
