final changes made to functions

--- a/cart.html
+++ b/cart.html
@@ -97,7 +97,7 @@
                         <!-- Products from cart (localstorage) will be place -->
                     </ul>
                 </div>
-                <form action="#" method="post" id="pay">
+                <form method="post" id="pay">
                     <div class="promocode flex">
                         <label for="promo" class="promocode__title">Promocode</label>
                         <input type="text" placeholder="Enter promocode" id="promo">
