--- a/jacket.html
+++ b/jacket.html
@@ -34,10 +34,10 @@
                         <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="men.html">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="women.html">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
