--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Raindays-shop for rainy comfort</title>
     <script type="module" src="js/index.js"></script>
     <script src="js/getPageName.js" defer></script>
-    <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/global.css">
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/media.css">
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/media.css">
 </head>
 
 <body class="body-index">
