change path in head

--- a/about.html
+++ b/about.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <script src="js/burger.js" defer></script>
-    <script type="module" src="js/cartIconDisplay.mjs"></script>
-    <script src="js/getPageName.js" defer></script>
-    <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/global.css">
+    <script src="/js/burger.js" defer></script>
+    <script type="module" src="/js/cartIconDisplay.mjs"></script>
+    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/about.css">
-    <link rel="stylesheet" href="src/css/media.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/about.css">
+    <link rel="stylesheet" href="/src/css/media.css">
 </head>
 
 <body class="about-us">
@@ -25,13 +25,13 @@
                 <span class="burger__line"></span>
                 <span class="burger__line"></span>
               </button>
-            <a class="header__logo" href="index.html">
-                <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
+            <a class="header__logo" href="/index.html">
+                <img src="/assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="/index.html">Home</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)">Men</a>
@@ -40,13 +40,13 @@
                         <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="/list.html">Kids</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="about.html">About us</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="/about.html">About us</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="contacts.html">Contacts</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="/contacts.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
