--- a/list.html
+++ b/list.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of jackets</title>
-    <script type="module" src="js/list.js"></script>
-    <script src="js/getPageName.js" defer></script>
-    <link rel="stylesheet" href="src/css/choices.min.css">
-    <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/global.css">
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/list.css">
-    <link rel="stylesheet" href="src/css/media.css">
+    <script type="module" src="/js/list.js"></script>
+    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="/src/css/choices.min.css">
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/list.css">
+    <link rel="stylesheet" href="/src/css/media.css">
 </head>
 
 <body class="loj">
