--- a/contacts.html
+++ b/contacts.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <script src="js/burger.js" defer></script>
-    <script type="module" src="js/cartIconDisplay.mjs"></script>
-    <script src="js/getPageName.js" defer></script>
-    <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/global.css">
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/contacts.css">
-    <link rel="stylesheet" href="src/css/media.css">
+    <script src="/js/burger.js" defer></script>
+    <script type="module" src="/js/cartIconDisplay.mjs"></script>
+    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/contacts.css">
+    <link rel="stylesheet" href="/src/css/media.css">
 </head>
 <body>
     <header class="header-jp">
