--- a/payment.html
+++ b/payment.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-    <script type="module" src="js/payment.js" defer></script>
+    <script type="module" src="/js/payment.js" defer></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
-    <script src="js/getPageName.js" defer></script>
-    <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="stylesheet" href="src/css/global.css">
-    <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/payment.css">
-    <link rel="stylesheet" href="src/css/media.css">
+    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/payment.css">
+    <link rel="stylesheet" href="/src/css/media.css">
 </head>
 <body>
     <header class="header-jp">
