--- a/about.html
+++ b/about.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" href="/src/css/normalize.css">
-    <link rel="stylesheet" href="/src/css/variables.css">
-    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/variables.css">
+    <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <link rel="stylesheet" href="/src/css/about.css">
-    <link rel="stylesheet" href="/src/css/media.css">
-    <script src="/js/burger.js" defer></script>
-    <script type="module" src="/js/cartIconDisplay.mjs"></script>
-    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/about.css">
+    <link rel="stylesheet" href="src/css/media.css">
+    <script src="js/burger.js" defer></script>
+    <script type="module" src="js/cartIconDisplay.mjs"></script>
+    <script src="js/getPageName.js" defer></script>
 </head>
 
 <body class="about-us">
