--- a/cart.html
+++ b/cart.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="/src/css/normalize.css">
-    <link rel="stylesheet" href="/src/css/variables.css">
-    <link rel="stylesheet" href="/src/css/global.css">
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <link rel="stylesheet" href="/src/css/cart.css">
-    <link rel="stylesheet" href="/src/css/media.css">
-    <script type="module" src="/js/shoppingCart.js" defer></script>
-    <script src="/js/getPageName.js" defer></script>
+    <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/variables.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/cart.css">
+    <link rel="stylesheet" href="src/css/media.css">
+    <script type="module" src="js/shoppingCart.js" defer></script>
+    <script src="js/getPageName.js" defer></script>
 </head>
 <body>
     <header class="header-jp">
