--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
                 <span class="burger__line"></span>
                 <span class="burger__line"></span>
               </button>
-            <a class="header__logo" href="/index.html">
-                <img src="/assets/images/logo-dark.png" alt="Rainydays company logo">
+            <a class="header__logo" href="index.html">
+                <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="/index.html">Home</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" style="color:var(--text-primary)">Men</a>
@@ -40,13 +40,13 @@
                         <a class="nav__link" style="color:var(--text-primary)">Women</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="/list.html">Kids</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="/about.html">About us</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="about.html">About us</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="/contacts.html">Contacts</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
