--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
                 <span class="burger__line"></span>
               </button>
             <a class="header__logo" href="index.html">
-                <img src="/assets/images/logo-dark.png" alt="Rainydays company logo">
+                <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
